# numba-quant3

./: .gitignore  README.md  clean_cache.py  pyproject.toml
Test/: test_params_config.py
Test/indicators/: indicators_template.py  test_atr.py  test_bbands.py  test_ema.py  test_psar.py  test_rsi.py  test_sma.py
Test/utils/: comparison_tool.py  conftest.py  over_constants.py
minimal_example/: calc_annualization_factor.py  load_data.py  numba_cache_list.py  numba_cache_tuple.py  numba_check_none.py  numba_container_performance_comparison.py  numba_dict_to_list.py  numba_dict_to_list_over.py  numba_enum.py  numba_f_str.py  numba_for_tuple.py  numba_for_tuple2.py  numba_jit_warmup_test.py  numba_list_of_arrays_example.py  numba_list_to_tuple.py  numba_mapping.py  numba_nested_example.py  numba_params_performance.py  numba_params_performance2.py  numba_prange_cache_conflict.py  numba_recompile.py  numba_return_type_example.py  numba_str_key.py  zip_compress.py
minimal_example/numba_quant_framework/: method_A.py  method_B.py
minimal_example/numba_typer_cache/: minimal_config.py  minimal_main.py  minimal_numba_functions.py
src/: main.py  parallel.py  parallel_mtf.py  parallel_mtf_A.py  parallel_mtf_B.py  parallel_signature.py  params.py
src/backtest/: backtest_enums.py  backtest_utils.py  calculate_backtest.py  calculate_balance.py  calculate_exit_logic.py  calculate_performance.py  calculate_trade_logic.py  performance_utils.py  should_trigger_exit_utils.py  trigger_position_exit.py  update_exit_targets_utils.py
src/convert_output/: archive_manager.py  data_io.py  (+8 more)
(+40 files in other folders)
