[project]
name = "numba-quant3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "memory-profiler>=0.61.0",
    "numba>=0.61.2",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pandas-ta @ git+https://github.com/hxse/pandas-ta.git@development",
    "ta-lib @ https://github.com/cgohlke/talib-build/releases/download/v0.6.4/ta_lib-0.6.4-cp313-cp313-win_amd64.whl ; sys_platform == 'win32'",
    "ta-lib ; sys_platform != 'win32'",
    "pandas>=2.3.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
